public interface DVDRateStrategy {
    public int getRate(int days);
}
