@startuml


interface DVDRateStrategy{
getCost(): int
}
class ChildrenRate{
getCost(): int
}
class NewReleaseRate{
getCost(): int
}
class OldReleaseRate{
getCost(): int
}
class ProcessRentals{
-DVDRateStrategy:DVDRateStrategy
+executePrice(): int
}



NewReleaseRate --|> DVDRateStrategy
OldReleaseRate --|> DVDRateStrategy
ChildrenRate --|> DVDRateStrategy
DVDRateStrategy <|-- ProcessRentals





@enduml